--- a/反转链表.md
+++ b/反转链表.md
@@ -10,7 +10,7 @@
 
 #### 迭代实现：
 
-```
+```javascript
 function reverseFunc(head){
     if (head === null || head.next === null){
         return head;
@@ -72,7 +72,7 @@ printLst(reverseFunc(obj1));//obj3,obj2,obj1
 
 #### 递归实现:
 
-```
+```javascript
 var reverseList = function(head) {
   if (head === null || head.next === null) {
     return head;
