--- a/递归与二叉树.md
+++ b/递归与二叉树.md
@@ -19,3 +19,4 @@
 
 [111. 二叉树的最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/description/)
 
+[654. 最大二叉树](https://leetcode.cn/problems/maximum-binary-tree/description/)
