--- a/递归与二叉树.md
+++ b/递归与二叉树.md
@@ -20,3 +20,5 @@
 [111. 二叉树的最小深度](https://leetcode.cn/problems/minimum-depth-of-binary-tree/description/)
 
 [654. 最大二叉树](https://leetcode.cn/problems/maximum-binary-tree/description/)
+
+[114. 二叉树展开为链表](https://leetcode.cn/problems/flatten-binary-tree-to-linked-list/description/?envType=study-plan-v2&id=top-interview-150)
